# real_time_detection_of_lane_markers

./: README.md
cplusplus/: CMakeLists.txt  mcvGetIPM.cpp
python/: InversePerspectiveMapping .py
